src/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = ";",
      peg$c1 = peg$literalExpectation(";", false),
      peg$c2 = ".",
      peg$c3 = peg$literalExpectation(".", false),
      peg$c4 = function(sentencias, pilas) { return {sentencias: sentencias,pilas: pilas}; },
      peg$c5 = "definicion",
      peg$c6 = peg$literalExpectation("definicion", false),
      peg$c7 = "de",
      peg$c8 = peg$literalExpectation("de", false),
      peg$c9 = "programa",
      peg$c10 = peg$literalExpectation("programa", false),
      peg$c11 = "ucp",
      peg$c12 = peg$literalExpectation("ucp", false),
      peg$c13 = "ejecute",
      peg$c14 = peg$literalExpectation("ejecute", false),
      peg$c15 = "con",
      peg$c16 = peg$literalExpectation("con", false),
      peg$c17 = "las",
      peg$c18 = peg$literalExpectation("las", false),
      peg$c19 = "siguientes",
      peg$c20 = peg$literalExpectation("siguientes", false),
      peg$c21 = "cartas",
      peg$c22 = peg$literalExpectation("cartas", false),
      peg$c23 = ":",
      peg$c24 = peg$literalExpectation(":", false),
      peg$c25 = function(head, s) { return s; },
      peg$c26 = function(head, tail) {
        var result = [];
        [head].concat(tail).forEach(function(element) {
          result.push(element);
        });
        return result;
      },
      peg$c27 = function(name) { return {type: 'o', op: 't', name: name,loc: location()}; },
      peg$c28 = "tome",
      peg$c29 = peg$literalExpectation("tome", false),
      peg$c30 = "una",
      peg$c31 = peg$literalExpectation("una", false),
      peg$c32 = "carta",
      peg$c33 = peg$literalExpectation("carta", false),
      peg$c34 = "en",
      peg$c35 = peg$literalExpectation("en", false),
      peg$c36 = function(name) { return {type: 'o', op: 'd', name: name,loc: location()}; },
      peg$c37 = "depositela",
      peg$c38 = peg$literalExpectation("depositela", false),
      peg$c39 = "deposite",
      peg$c40 = peg$literalExpectation("deposite", false),
      peg$c41 = function() { return {type: 'o', op: 'i',loc: location()}; },
      peg$c42 = "inviertala",
      peg$c43 = peg$literalExpectation("inviertala", false),
      peg$c44 = "invierta",
      peg$c45 = peg$literalExpectation("invierta", false),
      peg$c46 = /^[a-zA-Z0-9]/,
      peg$c47 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
      peg$c48 = function(name) {return name.join("")},
      peg$c49 = "mientras",
      peg$c50 = peg$literalExpectation("mientras", false),
      peg$c51 = "repita",
      peg$c52 = peg$literalExpectation("repita", false),
      peg$c53 = function(condiciones, sentencias) {
        return {type: 'c', control: "w",conditions: condiciones, sentencias: sentencias ,loc: location()};
      },
      peg$c54 = "si",
      peg$c55 = peg$literalExpectation("si", false),
      peg$c56 = function(condiciones, s) {return s;},
      peg$c57 = "sino",
      peg$c58 = peg$literalExpectation("sino", false),
      peg$c59 = function(condiciones, on_true, s) {return s;},
      peg$c60 = "nada",
      peg$c61 = peg$literalExpectation("nada", false),
      peg$c62 = function(condiciones, on_true, on_false) { return {loc: location()}; },
      peg$c63 = "mas",
      peg$c64 = peg$literalExpectation("mas", false),
      peg$c65 = function(condiciones, on_true, on_false, endif) {
        return {type: 'c', control: "i",conditions: condiciones, on_true: on_true,on_false: on_false,loc: location(), endif: endif};
      },
      peg$c66 = "y",
      peg$c67 = peg$literalExpectation("y", false),
      peg$c68 = "o",
      peg$c69 = peg$literalExpectation("o", false),
      peg$c70 = function(head, op_logico, cs) { return {cond_s: cs,op_logico:op_logico};},
      peg$c71 = "vacia",
      peg$c72 = peg$literalExpectation("vacia", false),
      peg$c73 = function(name, cond) {
        return {type: "empty", name: name, cond: cond};
      },
      peg$c74 = "boca",
      peg$c75 = peg$literalExpectation("boca", false),
      peg$c76 = "abajo",
      peg$c77 = peg$literalExpectation("abajo", false),
      peg$c78 = function(condi) {
        return {type: "estado", cond: condi};
      },
      peg$c79 = "no",
      peg$c80 = peg$literalExpectation("no", false),
      peg$c81 = "esta",
      peg$c82 = peg$literalExpectation("esta", false),
      peg$c83 = function(n) {
        var result="e";
        if (n!=null){
          result = "n";
        }
        return result;
      },
      peg$c84 = "es",
      peg$c85 = peg$literalExpectation("es", false),
      peg$c86 = "igual",
      peg$c87 = peg$literalExpectation("igual", false),
      peg$c88 = "distinto",
      peg$c89 = peg$literalExpectation("distinto", false),
      peg$c90 = "mayor",
      peg$c91 = peg$literalExpectation("mayor", false),
      peg$c92 = "menor",
      peg$c93 = peg$literalExpectation("menor", false),
      peg$c94 = "a",
      peg$c95 = peg$literalExpectation("a", false),
      peg$c96 = "que",
      peg$c97 = peg$literalExpectation("que", false),
      peg$c98 = function(gte) {return "gte";},
      peg$c99 = function(lte) {return "lte";},
      peg$c100 = function(eq) {return "eq";},
      peg$c101 = function(ne) {return "ne";},
      peg$c102 = function(gt) {return "gt";},
      peg$c103 = function(lt) {return "lt";},
      peg$c104 = "valor",
      peg$c105 = peg$literalExpectation("valor", false),
      peg$c106 = function(cond, rel, num) {
        return {type: "valor",cond:cond,rel:rel,num:num};
      },
      peg$c107 = "del",
      peg$c108 = peg$literalExpectation("del", false),
      peg$c109 = "palo",
      peg$c110 = peg$literalExpectation("palo", false),
      peg$c111 = "tope",
      peg$c112 = peg$literalExpectation("tope", false),
      peg$c113 = function(cond, palo) {
        console.log({type: "palo",cond:cond,palo:palo});
        return {type: "palo",cond:cond,palo:palo};
      },
      peg$c114 = function(rel, nombre) {
        return {type: "palo_tope",rel:rel,nombre:nombre};
      },
      peg$c115 = function(cond, rel, nombre) {
        return {type: "valor_tope",cond:cond,rel:rel,nombre:nombre};
      },
      peg$c116 = function(head, desc) {return desc;},
      peg$c117 = function(nombre, contenido) {
        return {nombre: nombre, contenido: contenido};
      },
      peg$c118 = function(cont) {return cont;},
      peg$c119 = "tiene",
      peg$c120 = peg$literalExpectation("tiene", false),
      peg$c121 = function(cartas) {return cartas;},
      peg$c122 = function(tiene) { return tiene; },
      peg$c123 = function(vacio) { return  {tipo: "vacio"};},
      peg$c124 = "un",
      peg$c125 = peg$literalExpectation("un", false),
      peg$c126 = "mazo",
      peg$c127 = peg$literalExpectation("mazo", false),
      peg$c128 = /^[0-9]/,
      peg$c129 = peg$classExpectation([["0", "9"]], false, false),
      peg$c130 = function(m) {return m;},
      peg$c131 = "^",
      peg$c132 = peg$literalExpectation("^", false),
      peg$c133 = "_^",
      peg$c134 = peg$literalExpectation("_^", false),
      peg$c135 = function(n, e) {
        var m=0;
        var s=0;
        if (!(typeof e === 'undefined')){
          if(e=="^"){
            s=1;
          }else{
            if(e=="_^"){
             s=2;
            }
          }
        }
        if (!(typeof n === 'undefined')){
          m=parseInt(n.join(""));
          return {tipo: "mazo_n_cartas", estado: s,n: m};
        }else{
          return {tipo: "mazo_completo", estado: s};
        }

      },
      peg$c136 = "-",
      peg$c137 = peg$literalExpectation("-", false),
      peg$c138 = function(head, tail) {
        var result = [];
        [head].concat(tail).forEach(function(element) {
          result.push(element);
        });
        return  {tipo: "lista", list:result};
      },
      peg$c139 = function(num, palo, inv) {
        var e=0;
        if (!(typeof inv === 'undefined')){
          e=1;
        }
        return {num: parseInt(num), palo: palo, estado: e};
      },
      peg$c140 = /^[bceo]/,
      peg$c141 = peg$classExpectation(["b", "c", "e", "o"], false, false),
      peg$c142 = function(num, palo, inv) {
        var e=0;
        if (!(typeof inv === 'undefined')){
          e=1;
        }
        var p={"b":"bastos" , "c":"copas" , "e":"espadas" , "o":"oros"};
        return {num: parseInt(num), palo: p[palo], estado: e};
      },
      peg$c143 = "bastos",
      peg$c144 = peg$literalExpectation("bastos", false),
      peg$c145 = "copas",
      peg$c146 = peg$literalExpectation("copas", false),
      peg$c147 = "espadas",
      peg$c148 = peg$literalExpectation("espadas", false),
      peg$c149 = "oros",
      peg$c150 = peg$literalExpectation("oros", false),
      peg$c151 = "1",
      peg$c152 = peg$literalExpectation("1", false),
      peg$c153 = "2",
      peg$c154 = peg$literalExpectation("2", false),
      peg$c155 = "3",
      peg$c156 = peg$literalExpectation("3", false),
      peg$c157 = "4",
      peg$c158 = peg$literalExpectation("4", false),
      peg$c159 = "5",
      peg$c160 = peg$literalExpectation("5", false),
      peg$c161 = "6",
      peg$c162 = peg$literalExpectation("6", false),
      peg$c163 = "7",
      peg$c164 = peg$literalExpectation("7", false),
      peg$c165 = "10",
      peg$c166 = peg$literalExpectation("10", false),
      peg$c167 = "11",
      peg$c168 = peg$literalExpectation("11", false),
      peg$c169 = "12",
      peg$c170 = peg$literalExpectation("12", false),
      peg$c171 = "la",
      peg$c172 = peg$literalExpectation("la", false),
      peg$c173 = "pila",
      peg$c174 = peg$literalExpectation("pila", false),
      peg$c175 = /^[()]/,
      peg$c176 = peg$classExpectation(["(", ")"], false, false),
      peg$c177 = ",",
      peg$c178 = peg$literalExpectation(",", false),
      peg$c179 = /^[ \t\r\n]/,
      peg$c180 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseprograma();

    return s0;
  }

  function peg$parseprograma() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsedefprog();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsesentencias();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 59) {
              s5 = peg$c0;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c1); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsedefpilas();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parselista_de_pilas();
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parse_();
                      if (s10 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 46) {
                          s11 = peg$c2;
                          peg$currPos++;
                        } else {
                          s11 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c3); }
                        }
                        if (s11 !== peg$FAILED) {
                          s12 = peg$parse_();
                          if (s12 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c4(s3, s9);
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedefprog() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 10) === peg$c5) {
      s1 = peg$c5;
      peg$currPos += 10;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c7) {
          s3 = peg$c7;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            if (input.substr(peg$currPos, 8) === peg$c9) {
              s5 = peg$c9;
              peg$currPos += 8;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c10); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse__();
              if (s6 !== peg$FAILED) {
                s1 = [s1, s2, s3, s4, s5, s6];
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedefpilas() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c11) {
      s1 = peg$c11;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 7) === peg$c13) {
          s3 = peg$c13;
          peg$currPos += 7;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            if (input.substr(peg$currPos, 3) === peg$c15) {
              s5 = peg$c15;
              peg$currPos += 3;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c16); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse__();
              if (s6 !== peg$FAILED) {
                if (input.substr(peg$currPos, 3) === peg$c17) {
                  s7 = peg$c17;
                  peg$currPos += 3;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c18); }
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse__();
                  if (s8 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 10) === peg$c19) {
                      s9 = peg$c19;
                      peg$currPos += 10;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c20); }
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parse__();
                      if (s10 !== peg$FAILED) {
                        if (input.substr(peg$currPos, 6) === peg$c21) {
                          s11 = peg$c21;
                          peg$currPos += 6;
                        } else {
                          s11 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c22); }
                        }
                        if (s11 !== peg$FAILED) {
                          s12 = peg$parse_();
                          if (s12 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 58) {
                              s13 = peg$c23;
                              peg$currPos++;
                            } else {
                              s13 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c24); }
                            }
                            if (s13 !== peg$FAILED) {
                              s1 = [s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13];
                              s0 = s1;
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsesentencias() {
    var s0, s1, s2, s3, s4, s5;
